<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.RegisterActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editFirstName"
        android:hint="@string/app_register_firstname" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editLastName"
        android:hint="@string/app_register_lastname"
        android:layout_below="@+id/editFirstName"
        android:layout_alignParentLeft="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editEmail"
        android:hint="@string/app_register_email_address"
        android:layout_below="@+id/editLastName"
        android:layout_alignParentLeft="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editPassword"
        android:hint="@string/app_register_password"
        android:layout_below="@+id/editEmail" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/editPhone"
        android:hint="@string/app_register_phone"
        android:layout_below="@+id/editPassword"
        android:layout_alignParentLeft="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/editCompany"
        android:hint="@string/app_register_company"
        android:layout_below="@+id/editPhone"
        android:layout_alignParentLeft="true" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerAgentNo"
        android:layout_below="@+id/editCompany"
        android:layout_alignParentLeft="true"
        android:spinnerMode="dialog"
        android:entries="@array/agentNo_array"
        android:prompt="@string/agentNo_prompt"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_register_register"
        android:id="@+id/bRegister"
        android:layout_below="@+id/spinnerAgentNo"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/spinnerAgentNo" />


</RelativeLayout>
