<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.comp8715.curo.activity.LoginActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editUsername"
        android:hint="@string/app_login_email" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editLoginPassword"
        android:hint="@string/app_login_password"
        android:layout_below="@+id/editUsername"/>

    <CheckBox
        android:text="@string/app_login_remember_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cbRemember"
        android:layout_below="@+id/editLoginPassword"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/app_login_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bLogin"
        android:layout_below="@+id/cbRemember"/>

    <TextView
        android:text="@string/app_login_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textRegisterLink"
        android:layout_below="@+id/bLogin"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
